
[package]
name = "client-side"
version = "0.0.1"
edition = "2021"

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

js-sys = { workspace = true }

serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }

console_error_panic_hook = { workspace = true }

gloo = { workspace = true }


config = { workspace = true }
enums = { workspace = true }
utils = { workspace = true }


[dependencies.leptos]
workspace = true
features = ["csr"]

[dependencies.leptos_meta]
workspace = true
features = ["csr"]
