[package]
name = "client"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
http = { version = "1.0.0", optional = true }
leptos_actix = { version = "0.6.11", optional = true }
leptos_i18n = { workspace = true, features = ["track_locale_files", "serde"] }
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
gloo = { workspace = true }
config = { workspace = true }
structs = { workspace = true }
enums = { workspace = true }
utils = { workspace = true }
strum = { version = "0.26.2" }

[package.metadata.leptos-i18n]
default = "en_US"
locales = ["en_US", "pt_BR"]
locales-dir = "../locales"

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:actix-files",
    "dep:actix-web",
    "dep:leptos_actix",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos_i18n/actix",
]

# [package.metadata.leptos]
# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
# lib-default-features = false
# Additional files your application could depends on.
# A change to any file in those directories will trigger a rebuild.
#
# Optional.
# watch-additional-files = ["../locales"]
