[package]
name = "client"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

leptos_i18n = { workspace = true, features = [
    "track_locale_files",
    "serde",
    "interpolate_display",
] }
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
gloo = { workspace = true }
config = { workspace = true }
structs = { workspace = true }
enums = { workspace = true }
utils = { workspace = true }
agnus_daily_error = { workspace = true }
strum = { version = "0.26.2" }
chrono = { workspace = true }
db = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true }
invidious = { workspace = true }

[package.metadata.leptos-i18n]
default = "en-US"
locales = ["en-US", "pt-BR"]
locales-dir = "../locales"

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr", "utils/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "utils/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "db", "surrealdb", "utils/ssr"]

# [package.metadata.leptos]
# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
# lib-default-features = false
# Additional files your application could depends on.
# A change to any file in those directories will trigger a rebuild.
#
# Optional.
# watch-additional-files = ["../locales"]
