
[package]
name = "client_csr"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
gloo = { workspace = true }
config = { workspace = true }
enums = { workspace = true }
utils = { workspace = true }
client = { workspace = true }


[dependencies.leptos]
workspace = true
features = ["csr"]

[dependencies.leptos_meta]
workspace = true
features = ["csr"]

[dependencies.leptos_router]
workspace = true
features = ["csr"]

# Defines a size-optimized profile for the WASM bundle in release mode
# [profile.wasm-release]
# inherits = "release"
# opt-level = 'z'
# lto = true
# codegen-units = 1
# panic = "abort"
