[package]
name = "liturgy-of-the-word"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "liturgy_of_the_word_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies.tauri]
tauri = { workspace = true }
features = []

[dependencies.tauri-plugin-shell]
tauri-plugin-shell = { workspace = true }


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
