[package]
name = "config"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
enums = { workspace = true }
chrono = { workspace = true }
leptos = { workspace = true }
gloo = { workspace = true }
structs = { workspace = true }
agnus_daily_error = { workspace = true }
invidious = { workspace = true }
lazy_static = "1.4.0"
