[package]
name = "liturgy_of_the_day_error"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
gloo = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }