[package]
name = "agnus_daily_error"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
gloo = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
surrealdb = { workspace = true }
strum = { version = "0.26.2" }
reqwest = { workspace = true }
leptos = { workspace = true }
