[package]
name = "structs"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
leptos = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { version = "0.26.2" }
strum_macros = { version = "0.26.2" }
enums = { workspace = true }
surrealdb = { wprkspace = true }
