[package]
name = "utils"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
leptos = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
agnus_daily_error = { workspace = true }

[dependencies.web-sys]
workspace = true
optional = true
features = ['Window', "Navigator"]

[features]
csr = ["web-sys"]
hydrate = ["web-sys"]
ssr = []
